--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "ajax-request": "^1.2.1",
+    "base-64": "^0.1.0",
     "fs": "0.0.2",
     "mime": "^1.3.4",
     "react": "15.2.1",
