--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "15.2.1",
     "react-native": "0.30.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-material-design": "^0.3.7",
     "rn-camera-roll": "0.0.5",
     "util": "^0.10.3"
   }
