--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,3 +7,5 @@ include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../node_modules/react-native-camera/android')
+include ':RNGL'
+project(':RNGL').projectDir = file('../node_modules/gl-react-native/android')
