--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "ajax-request": "^1.2.1",
     "base-64": "^0.1.0",
     "fs": "0.0.2",
+    "gl-react": "^2.2.5",
+    "gl-react-native": "^2.28.3",
+    "jimp": "^0.2.24",
     "mime": "^1.3.4",
     "react": "15.2.1",
     "react-native": "0.30.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-material-design": "^0.3.7",
+    "react-native-view-snapshot": "^0.3.0",
     "rn-camera-roll": "0.0.5",
     "util": "^0.10.3"
   }
