--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-material-design": "^0.3.7",
     "react-native-view-snapshot": "^0.3.0",
     "rn-camera-roll": "0.0.5",
+    "tcomb-form-native": "^0.6.0",
     "util": "^0.10.3"
   }
 }
